Add characteristic matching

--- a/src/tests/sniffp/a.yaml
+++ b/src/tests/sniffp/a.yaml
@@ -1,6 +1,6 @@
 meta:
-  description: "This is just an example"
-  name: "hello_banker"
+  description: "data assets probe"
+  name: "mysql_se"
   enabled: true
 
 trigger_ports:
@@ -18,17 +18,16 @@ packet_patterns:
     "
 
 rule_definition: |
-  rule hello_bankerc : banker {
+  rule mysql_se : db {
     meta:
       description = "This is just an example"
       threat_level = 3
       in_the_wild = true
     
     strings:
-      $a = {6A 40 68 00 30 00 00 6A 14 8D 91}
+      $a = {6d 00 00 00 0a 35 2e 35  2e 35 2d 31 30 2e 38 2e}
       $b = {8D 4D B0 2B C1 83 C0 27 99 6A 4E 59 F7 F9}
-      $c = "UVODFRYSIHLNWPEJXQZAKCBGMT"
     
     condition:
-      $a or $b or $c
+      $a or $b
   }
